<resources>
    <string name="driving_mode_answer">@string/incoming_answer</string>
    <string name="driving_mode_reject">@string/incoming_reject</string>
    <string name="config_multiwindow_style">isolatedSplit</string>
    <string name="ddmmyy">dd/MM/yyyy</string>
    <string name="mmddyy">MM/dd/yyyy</string>
    <string name="yymmdd">yyyy/MM/dd</string>
    <string name="day_postfix" />
    <string name="year_postfix" />
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency dialler</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="inCallLabel">InCallUI</string>
    <string name="unknown">Unknown</string>
    <string name="anonymous">anonymous</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response. Timed out</string>
    <string name="callFailed_server_unreachable">Unable to reach server</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect user name or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error occurred. Try later</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control</string>
    <string name="callFailed_cdma_notEmergency">Emergency calls only</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Earphone</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending Tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="modify_call_prompt_yes">Yes</string>
    <string name="modify_call_prompt_no">No</string>
    <string name="voicemail">Voicemail</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="change_num">Update</string>
    <string name="list_language_dtitle">Languages</string>
    <string name="enable_disable_local_weather">Local weather</string>
    <string name="local_weather_enable">Local weather enabled</string>
    <string name="local_weather_disable">Local weather disabled</string>
    <string name="enable_disable_atr">Area traffic reports</string>
    <string name="atr_enable">Area traffic reports enabled</string>
    <string name="atr_disable">Area traffic reports disabled</string>
    <string name="enable_disable_lafs">Local airport flight schedules</string>
    <string name="lafs_enable">Local airport flight schedules enabled</string>
    <string name="lafs_disable">Local airport flight schedules disabled</string>
    <string name="enable_disable_restaurants">Restaurants</string>
    <string name="restaurants_enable">Restaurants enabled</string>
    <string name="restaurants_disable">Restaurants disabled</string>
    <string name="enable_disable_lodgings">Lodgings</string>
    <string name="lodgings_enable">Lodgings enabled</string>
    <string name="lodgings_disable">Lodgings disabled</string>
    <string name="enable_disable_retail_directory">Retail directory</string>
    <string name="retail_directory_enable">Retail directory enabled</string>
    <string name="retail_directory_disable">Retail directory disabled</string>
    <string name="enable_disable_advertisements">Advertisements</string>
    <string name="advertisements_enable">Advertisements enabled</string>
    <string name="advertisements_disable">Advertisements disabled</string>
    <string name="enable_disable_stock_quotes">Stock quotes</string>
    <string name="stock_quotes_enable">Stock quotes enabled</string>
    <string name="stock_quotes_disable">Stock quotes disabled</string>
    <string name="enable_disable_eo">Employment opportunities</string>
    <string name="eo_enable">Employment opportunities enabled</string>
    <string name="eo_disable">Employment opportunities disabled</string>
    <string name="enable_disable_mhh">Medical and health mode</string>
    <string name="mhh_enable">Medical and health mode activated</string>
    <string name="mhh_disable">Medical and health mode deactivated</string>
    <string name="enable_disable_technology_news">Technology news</string>
    <string name="technology_news_enable">Technology news enabled</string>
    <string name="technology_news_disable">Technology news disabled</string>
    <string name="enable_disable_multi_category">Multi-category</string>
    <string name="multi_category_enable">Multi-category enabled</string>
    <string name="multi_category_disable">Multi-category disabled</string>
    <string name="lte_gsm_wcdma_automode">LTE/GSM/WCDMA (auto connect)</string>
    <string name="gsm_wcdma_automode">GSM/WCDMA (auto connect)</string>
    <string name="lte_wcdma_automode">LTE/WCDMA (auto connect)</string>
    <string name="lte_wcdma_gsm_automode">"LTE/WCDMA/GSM
(auto connect)"</string>
    <string name="wcdma_gsm_automode">"WCDMA/GSM
(auto connect)"</string>
    <string name="gsm_only">GSM only</string>
    <string name="wcdma_only">WCDMA only</string>
    <string name="gsm_tdscdma_tdlte_automode">GSM/TD-SCDMA/TD-LTE (auto connect)</string>
    <string name="gsm_tdscdma_automode">GSM/TD-SCDMA (Auto mode)</string>
    <string name="tdscdma_only">TD-SCDMA only</string>
    <string name="tdlte_only">TD-LTE only</string>
    <string name="lte_only">LTE only</string>
    <string name="gsm_hspa_lte_autoconnect">GSM/HSPA/LTE (auto connect)</string>
    <string name="gsm_hspa_autoconnect">GSM/HSPA (auto connect)</string>
    <string name="hspa_only">HSPA only</string>
    <string name="mode_4g_3g_2g_autoconnect">4G/3G/2G (auto connect)</string>
    <string name="mode_3g_2g_autoconnect">3G/2G (auto connect)</string>
    <string name="mode_3g_only">3G only</string>
    <string name="mode_2g_only">2G only</string>
    <string name="data_connected_change">Unable to change networks while data service in use. Stop using current data service and select another available network?</string>
    <string name="lte_ready">Your device was upgraded to support LTE network. You can change the network mode to use LTE network</string>
    <string name="cdma_system_select_title">System select</string>
    <string name="cdma_system_select_summary">Change CDMA roaming mode</string>
    <string name="cdma_system_select_dialogtitle">System select</string>
    <string name="doneButton">Done</string>
    <string name="caller_manage_header">Conference call %s</string>
    <string name="fake_phone_activity_phoneNumber_text">(650) 555-1234</string>
    <string name="card_title_dialing">Dialling</string>
    <string name="card_title_alerting">Alerting</string>
    <string name="card_title_redialing">Redialling...</string>
    <string name="card_title_conf_call">Conference call</string>
    <string name="card_title_incoming_call">Incoming call</string>
    <string name="card_title_call_ended">Call ended</string>
    <string name="card_title_on_hold">On hold</string>
    <string name="card_title_hanging_up">Hanging up</string>
    <string name="card_title_in_call">In call</string>
    <string name="card_title_dialing_via_internet">Dialling via Internet</string>
    <string name="hd_voice">HD Voice</string>
    <string name="card_title_my_phone_number">My number is %s</string>
    <string name="notification_dialing">Dialing</string>
    <string name="notification_missedCallTitle">Missed call</string>
    <string name="notification_missedCallsTitle">Missed calls</string>
    <string name="notification_missedCallsMsg">%d missed calls</string>
    <string name="notification_ongoing_call">Ongoing call</string>
    <string name="notification_on_hold">On hold</string>
    <string name="notification_incoming_call">Incoming call</string>
    <string name="notification_action_end_call">Hang up</string>
    <string name="incall_call_type_label_sip">Internet call</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenUnholdText">Unhold</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenModifyCallText">Modify Call</string>
    <string name="onscreenShowDialpadText">Keypad</string>
    <string name="onscreenHideDialpadText">Hide</string>
    <string name="onscreenSpeakerText">Speaker</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenAddCallText_description">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenManageCallsText">Manage calls</string>
    <string name="onscreenManageConferenceText">Manage conference</string>
    <string name="onscreenManageConfText">Manage</string>
    <string name="onscreenAudioText">Audio</string>
    <string name="ota_call_end">Back</string>
    <string name="calling_via_template">"Calling via ^1
"<b>^2</b></string>
    <string name="slide_to_answer_hint">Answer</string>
    <string name="slide_right_to_answer_content_description">Swipe right to answer call.</string>
    <string name="slide_to_decline_hint">Decline</string>
    <string name="slide_left_to_reject_content_description">Swipe left to reject call.</string>
    <string name="contactPhoto">contact photo</string>
    <string name="goPrivate">Change to private call</string>
    <string name="sip_call_options_entry_1">For all calls when mobile network available</string>
    <string name="sip_call_options_entry_2">Only for Internet calls</string>
    <string name="sip_call_options_entry_3">Ask for every call</string>
    <string name="sip_call_options_wifi_only_entry_1">For all calls</string>
    <string name="end_call">End call</string>
    <string name="headset">Headset</string>
    <string name="interactive_tutorial_endcall">Tap End call.</string>
    <string name="menu_record_voice">Record</string>
    <string name="switch_cam">Switch camera</string>
    <string name="switch_camera">Switch</string>
    <string name="hide">Hide me</string>
    <string name="menu_hideDialpad">Hide keypad</string>
    <string name="show">Show me</string>
    <string name="stop">Stop</string>
    <string name="adduser">Invite new participant</string>
    <string name="switch_to_voice_call">Switch to voice call</string>
    <string name="decoration">Decoration</string>
</resources>