<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/inCallButtons" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/inCallIconActionBarContainer" android:layout_width="fill_parent" android:layout_height="@dimen/in_call_buttons_container_video_height" android:layout_alignParentBottom="true">
        <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/inCallButtonContainer" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:id="@id/inCallButtonContainer" android:background="@color/incall_call_button_background_qcif_video" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/in_call_buttons_video_height">
                <FrameLayout android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <Button android:id="@id/switchCameraButton" android:background="@drawable/call_dial_btn_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/switch_camera" android:drawableTop="@drawable/videocall_switch_button" style="@style/InCallTouchUpperButton" />
                </FrameLayout>
                <ImageView android:background="#ff000000" android:layout_width="2.0dip" android:layout_height="fill_parent" />
                <FrameLayout android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <ToggleButton android:id="@id/hideShowButton" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="@string/show" android:textOff="@string/hide" android:drawableTop="@drawable/hd_videocall_hide_show_button" android:drawableBottom="@drawable/videocall_btn_focus_switch_off" android:drawablePadding="2.0dip" style="@style/InCallTouchToggleButtonNoFrame" />
                    <ToggleButton android:id="@id/muteButton" android:paddingTop="11.0dip" android:paddingBottom="0.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="@string/onscreenMuteText" android:textOff="@string/onscreenMuteText" android:drawableTop="@drawable/videocall_mute_button" android:drawableBottom="@drawable/videocall_toggle_button" android:drawablePadding="4.0dip" style="@style/InCallTouchToggleButtonNoFrame" />
                    <Button android:id="@id/dialpadButton" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/menu_hideDialpad" android:drawableTop="@drawable/videocall_hide_keypad_button" style="@style/InCallTouchUpperButton" />
                </FrameLayout>
                <ImageView android:background="#ff000000" android:layout_width="2.0dip" android:layout_height="fill_parent" />
                <Button android:id="@id/endButton" android:background="@drawable/call_dial_btn_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" android:text="@string/end_call" android:drawableTop="@drawable/videocall_end_button" android:layout_weight="1.0" style="@style/InCallTouchUpperButton" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout android:id="@id/callBannerToggleArea" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/vt_call_banner_toggle_area_height" android:layout_above="@id/inCallIconActionBarContainer" android:soundEffectsEnabled="false" />
    <RelativeLayout android:id="@id/farEndArea" android:layout_width="fill_parent" android:layout_height="@dimen/farendview_incall_height" android:layout_marginTop="112.0dip" android:layout_alignParentTop="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/switchCallButtons" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vt_call_banner_open_switch_call_button_margin_top" android:layout_marginRight="10.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <ImageButton android:id="@id/switchVTCallButton" android:background="#00000000" android:visibility="gone" android:layout_width="52.0dip" android:layout_height="52.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/call_video_conversion" android:contentDescription="@string/switch_to_voice_call" android:hoverPopupType="tooltip" />
        <ImageButton android:id="@id/switchVCCallButton" android:background="#00000000" android:visibility="gone" android:layout_width="52.0dip" android:layout_height="52.0dip" android:src="@drawable/call_video_group_call_skt" android:contentDescription="@string/adduser" android:hoverPopupType="tooltip" />
    </LinearLayout>
</RelativeLayout>