<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/tutorial_bottomButtons" android:paddingLeft="@dimen/in_call_buttons_padding_left" android:paddingTop="@dimen/in_call_buttons_padding_top" android:paddingRight="@dimen/in_call_buttons_padding_right" android:paddingBottom="@dimen/in_call_buttons_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/tutorial_hd_video_call_bottom_button_margin_top" android:layout_alignParentBottom="true">
        <FrameLayout android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginRight="@dimen/in_call_upper_buttons_margin_right" android:layout_weight="1.0">
            <Button android:gravity="center" android:id="@id/switch_camera" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/switch_cam" android:drawableTop="@drawable/hd_videocall_switch_button" style="@style/defaultVTCallButton" />
        </FrameLayout>
        <FrameLayout android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginRight="@dimen/in_call_upper_buttons_margin_right" android:layout_weight="1.0">
            <ToggleButton android:gravity="center" android:id="@id/hide_show" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="@dimen/in_call_upper_buttons_margin_right" android:textOn="@string/show" android:textOff="@string/hide" android:drawableTop="@drawable/hd_videocall_hide_show_button" style="@style/defaultVTCallButton" />
            <ToggleButton android:gravity="center" android:id="@id/mute" android:visibility="gone" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="@dimen/in_call_upper_buttons_margin_right" android:textOn="@string/onscreenMuteText" android:textOff="@string/onscreenMuteText" android:drawableTop="@drawable/incall_button_mute_icon" style="@style/defaultVTCallToggleButton" />
        </FrameLayout>
        <FrameLayout android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:gravity="center" android:id="@id/endButton" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/end_call" android:drawableTop="@drawable/incall_button_end_icon" style="@style/defaultVTCallButton" />
            <ImageView android:layout_gravity="center" android:id="@id/help_tab_endcall" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help_tap_3" />
        </FrameLayout>
    </LinearLayout>
    <FrameLayout android:layout_gravity="top|right|center" android:id="@id/help_tip_endcall" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/help_tip_endcall_left">
        <FrameLayout android:id="@id/help_tip_endcall_text" android:background="@drawable/help_popup_picker_bg_w_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/tutorial_hd_video_call_screen_during_screen_help_popup_margin_bottom">
            <TextView android:text="@string/interactive_tutorial_endcall" style="@style/TutorialPopupStyle" />
        </FrameLayout>
        <ImageView android:layout_gravity="bottom|right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/tutorial_hd_video_call_screen_during_screen_help_popup_picker_margin_right" android:layout_marginBottom="@dimen/tutorial_hd_video_call_screen_during_screen_help_popup_picker_margin_bottom" android:src="@drawable/help_popup_picker_b_c" />
    </FrameLayout>
</FrameLayout>