<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/inCallButtonViewDriveLink" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/inCallScreenButtonsContainer" android:layout_width="fill_parent" android:layout_height="@dimen/in_call_buttons_drivelink_height_container" android:layout_alignParentBottom="true" android:splitMotionEvents="false">
        <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/IncallBottomFrame" android:visibility="gone" android:layout_width="@dimen/in_call_buttons_drivelink_width" android:layout_height="@dimen/in_call_buttons_drivelink_height" android:splitMotionEvents="false">
            <Button android:textSize="30.0dip" android:textColor="@color/drivelink_incall_call_banner_text_color" android:id="@id/unholdButtonDual" android:background="@drawable/call_end_btn_x" android:paddingTop="15.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="fill_parent" android:text="@string/onscreenUnholdText" android:drawableTop="@drawable/incall_button_unhold_icon" android:layout_weight="1.0" android:fontFamily="sans-serif-light" />
            <Button android:textSize="30.0dip" android:textColor="@color/drivelink_incall_call_banner_text_color" android:id="@id/cancelButtonDual" android:background="@drawable/call_end_btn_x" android:paddingBottom="20.0dip" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:text="@string/end_call" android:drawableTop="@drawable/driving_call_icon_endcall" android:layout_weight="1.0" android:fontFamily="sans-serif-light" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/incall_drivelink_button_contaienr" android:layout_width="fill_parent" android:layout_height="194.0dip" android:splitMotionEvents="false">
            <ToggleButton android:textSize="30.0dip" android:textColor="@color/drivelink_incall_call_banner_text_color" android:gravity="center" android:id="@id/cancelButton" android:background="@drawable/call_end_btn_x" android:layout_width="fill_parent" android:layout_height="91.0dip" android:layout_marginBottom="2.0dip" android:textOn="@string/end_call" android:textOff="@string/end_call" android:drawableTop="@drawable/driving_call_icon_endcall" android:drawablePadding="-5.0dip" />
            <LinearLayout android:id="@id/incall_drivelink_below_button_container" android:layout_width="fill_parent" android:layout_height="@dimen/incall_drivelink_below_button_container" android:splitMotionEvents="false">
                <ToggleButton android:id="@id/speakerButton" android:layout_marginRight="2.0dip" android:textOn="@string/onscreenSpeakerText" android:textOff="@string/onscreenSpeakerText" android:drawableTop="@drawable/incall_button_speaker_drivelink_icon" style="@style/InCallDriveLinkTouchToggleButtonNoFrame" />
                <ToggleButton android:id="@id/bluetoothButton" android:textOn="@string/audio_mode_bluetooth" android:textOff="@string/audio_mode_bluetooth" android:drawableTop="@drawable/incall_button_bluetooth_drivelink_icon" style="@style/InCallDriveLinkTouchToggleButtonNoFrame" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>